# textforme

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  bridge.js  styles.css
frontend/src/components/: BriefOverlay.jsx  ContactList.jsx  LogsOverlay.jsx  NotePanel.jsx  PromptsOverlay.jsx  SettingsPanel.jsx
resources/: launchagent.plist
src/textforme/: __init__.py  cli.py  config.py  contact_names.py  daemon.py  database.py  keychain.py  launchagent.py  onboarding.py
src/textforme/anthropic/: client.py  models.py  prompts.py
src/textforme/messaging/: client.py  events.py  models.py
src/textforme/service/: briefer.py  policies.py  responder.py  scheduler.py
src/textforme/tui/: app.py  contacts.py  logs.py  settings.py
src/textforme/webui/: __init__.py  bridge.py  window.py
tests/: conftest.py
tests/fixtures/: factories.py
tests/integration/: test_pipeline.py  test_recovery.py  test_socket.py
tests/security/: test_boundaries.py  test_prompt_injection.py
tests/unit/: test_anthropic_client.py  test_briefer.py  test_cli.py  test_contact_names.py  test_contact_note.py  test_daemon.py  test_daemon_client.py  test_database.py  test_keychain.py  test_launchagent.py  test_logs_panel.py  test_messaging_client.py  test_model_picker.py  test_onboarding.py  test_policies.py  test_prompts.py  test_responder.py  test_scheduler.py
