[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textforme"
version = "0.1.0"
description = "Self-hosted macOS terminal app that auto-replies to selected iMessage/SMS contacts using Anthropic Claude models."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "textual>=0.80",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
textforme = "textforme.cli:main"
textformed = "textforme.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textforme"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
